todolist/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-app
  namespace: todolist-namespace   # Added namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-app
  template:
    metadata:
      labels:
        app: todolist-app
    spec:
      containers:
        - name: todolist-app
          image: 219583565093/todolist-app:latest
          ports:
            - containerPort: 8080
