todolist/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todolist-service
  namespace: todolist-namespace  # Added namespace
spec:
  selector:
    app: todolist-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
